feat(web): add finish stripe connect setup alert
